--- a/dippaxfc/src/main/webapp/assets/css/myapp.css
+++ b/dippaxfc/src/main/webapp/assets/css/myapp.css
@@ -1,6 +1,11 @@
- 
+ /*!
+ * Start Bootstrap - Shop Homepage (http://startbootstrap.com/)
+ * Copyright 2013-2016 Start Bootstrap
+ * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
+ */
+
 html {
-	height:100%;
+	height :100%;
 }
 
 body {
@@ -13,7 +18,7 @@ body {
 }
 
 .carousel-holder {
-    margin-bottom: 10px;
+    margin-bottom: 30px;
 }
 
 .carousel-control,
@@ -49,16 +54,8 @@ body {
     color: #333;
 }
 
-.footer {
-	width:100%;
-	position:absolute;
-	bottom:15px ;
-	height: 60px;
-	
-}
-.content {
-	padding-bottom: 60px; /*height of the footer*/	
-}
+
+
 
 /*
 	custom styling
@@ -68,6 +65,21 @@ body {
 	min-height:100%;
 	position: relative;
 }
+
+
+.content {
+	padding-bottom: 60px; /*height of the footer*/	
+}
+
+
+.footer {
+	width:100%;
+	position:absolute;
+	bottom:0 ;
+	height: 60px;
+	
+}
+
 
 .dataTableImg {
 	
