--- a/dippaxfc/src/main/webapp/assets/css/myapp.css
+++ b/dippaxfc/src/main/webapp/assets/css/myapp.css
@@ -1,11 +1,11 @@
- /*!
+/*!
  * Start Bootstrap - Shop Homepage (http://startbootstrap.com/)
  * Copyright 2013-2016 Start Bootstrap
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
  */
 
 html {
-	height :100%;
+	height:100%;
 }
 
 body {
@@ -54,7 +54,10 @@ body {
     color: #333;
 }
 
-
+footer {
+    margin: 10;
+    
+}
 
 
 /*
@@ -68,14 +71,14 @@ body {
 
 
 .content {
-	padding-bottom: 60px; /*height of the footer*/	
+	padding-bottom: 5px; /*height of the footer*/	
 }
 
 
 .footer {
 	width:100%;
 	position:absolute;
-	bottom:0 ;
+	bottom:20px;
 	height: 5px;
 	
 }
@@ -88,8 +91,19 @@ body {
 	
 }
 
+.adminDataTableImg {
+	
+	height:50px;
+	width:50px;
+	
+}
+
 .has-success {
 	color: #4582ec;
+}
+
+.table-responsive{
+	overflow-x: inherit;
 }
 
 /*Toggle Switch code*/
@@ -218,6 +232,15 @@ input:checked + .slider:before {
     border-top: 2px solid;
 }
 
+.cartImg {
+	width: 100px;
+	height:100px;
+}
+
+.unavailable {
+	color: red;
+	
+}
 
 /* landing css */
 
